fix vertical align

--- a/style/style.css
+++ b/style/style.css
@@ -24,7 +24,7 @@ body {
 
 .main-box {
   background-color: aliceblue;
-  margin: 0 auto;
+  margin: auto;
   width: 100%;
   height: 70vh;
   padding: 10px 50px;
